# Otus_test_containers

./: CMakeLists.txt
project_List/: CMakeLists.txt
project_List/src/: MyList.cpp  MyList.h
project_List/test/: test_mylist.cpp
project_Vector/: CMakeLists.txt
project_Vector/src/: MyVector.cpp  MyVector.h
project_Vector/test/: test_myvector.cpp
